# claudeforge

./: .gitignore  README.md  package.json  pyproject.toml
.claude/: settings.local.json
docs/: CNAME  index.html
src/commands/: init.js  watch.js
templates/: gitignore.tpl
templates/claude/commands/: analyze-project.md.tpl  setup-project.md.tpl
templates/claude/hooks/: post-tool-use.sh.tpl  pre-tool-use.sh.tpl
