[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeforge"
version = "1.0.4"
description = "Forge production-ready AI agent projects — agents, slash commands, memory, CI/CD, and devcontainers in one command"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["claudeforge", "claude", "claude-code", "anthropic", "scaffold", "ai", "agents", "cli", "github-actions", "devcontainer"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jainvaibhav62/claudeforge"
"Bug Tracker" = "https://github.com/jainvaibhav62/claudeforge/issues"

[project.scripts]
claudeforge = "claudeforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["claudeforge"]

[tool.hatch.build.targets.wheel.force-include]
"bin"          = "claudeforge/_nodejs/bin"
"src"          = "claudeforge/_nodejs/src"
"templates"    = "claudeforge/_nodejs/templates"
"package.json" = "claudeforge/_nodejs/package.json"

[tool.hatch.build.targets.sdist]
include = [
  "claudeforge/",
  "bin/",
  "src/",
  "templates/",
  "package.json",
  "pyproject.toml",
  "MANIFEST.in",
  "README.md",
]
